{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 97,
  "lineage": "06c45dd1-bd46-0260-6053-e242799ab5de",
  "resources": [
    {
      "module": "module.eks_backend.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0a191d88748f78427",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a191d88748f78427",
            "ingress": [],
            "name": "eks-backend-cluster-20251111213111665400000019",
            "name_prefix": "eks-backend-cluster-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-backend-cluster",
              "Project": "comerapay"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-backend-cluster",
              "Project": "comerapay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_backend.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-06d2ef6d438509a58",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06d2ef6d438509a58",
            "ingress": [],
            "name": "eks-backend-node-2025111121311205270000001a",
            "name_prefix": "eks-backend-node-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-backend-node",
              "Project": "comerapay",
              "kubernetes.io/cluster/eks-backend": "owned"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-backend-node",
              "Project": "comerapay",
              "kubernetes.io/cluster/eks-backend": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_backend.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3569539304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a191d88748f78427",
            "security_group_rule_id": "sgr-0518931eac35eefc3",
            "self": false,
            "source_security_group_id": "sg-06d2ef6d438509a58",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_peer_cidrs_kube",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "Allow API traffic from peer VPCs",
            "from_port": 443,
            "id": "sgrule-289625698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a191d88748f78427",
            "security_group_rule_id": "sgr-0d3436f00fbed0be2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_backend.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2065728869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-020d650da580dd8ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2577633641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-0c002eb932611933b",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4081732232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-023cc55cf552f6913",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-973614366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-0a2e14fb966d5138c",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-693375295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-0cb84aee0ac3a44f3",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1307910900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-07eed85e18faea45b",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-508050974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-00b1d2e61c3f3268e",
            "self": false,
            "source_security_group_id": "sg-0a191d88748f78427",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1059721172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-01a20032c96c9faec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_from_peers",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "Allow app traffic from peer VPCs",
            "from_port": 0,
            "id": "sgrule-3886256315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-03f7d91984e6f069f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-934810098",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-0a2c31e66dae84155",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2481435165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06d2ef6d438509a58",
            "security_group_rule_id": "sgr-080666b5d6844c44f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_backend.module.eks.aws_security_group.cluster",
            "module.eks_backend.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0b519c81753baccb6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b519c81753baccb6",
            "ingress": [],
            "name": "eks-gateway-cluster-20251111213111088900000017",
            "name_prefix": "eks-gateway-cluster-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-gateway-cluster",
              "Project": "comerapay"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-gateway-cluster",
              "Project": "comerapay"
            },
            "timeouts": null,
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0f0e360732f834426",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0f0e360732f834426",
            "ingress": [],
            "name": "eks-gateway-node-20251111213111201900000018",
            "name_prefix": "eks-gateway-node-",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-gateway-node",
              "Project": "comerapay",
              "kubernetes.io/cluster/eks-gateway": "owned"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-gateway-node",
              "Project": "comerapay",
              "kubernetes.io/cluster/eks-gateway": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-583247369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b519c81753baccb6",
            "security_group_rule_id": "sgr-0b8eca8d68f7271fd",
            "self": false,
            "source_security_group_id": "sg-0f0e360732f834426",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_peer_cidrs_kube",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.20.0.0/16"
            ],
            "description": "Allow API traffic from peer VPCs",
            "from_port": 443,
            "id": "sgrule-3759392256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b519c81753baccb6",
            "security_group_rule_id": "sgr-0e5ba302477dba54b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_gateway.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-982169588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-07c4afc1c24d99340",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3197535453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-06164643e2e774b96",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3355156220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-040d53c4d8548134e",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-247069034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-019f136ef5fff7923",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-501597515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-0e07f285d0e7e4ab4",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2034562688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-0d7d90e44f4d36da2",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-224451718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-0a1c1cc0e2e524a5a",
            "self": false,
            "source_security_group_id": "sg-0b519c81753baccb6",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4219202543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-0916cc8267253cc62",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_from_peers",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.20.0.0/16"
            ],
            "description": "Allow app traffic from peer VPCs",
            "from_port": 0,
            "id": "sgrule-2075441634",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-07dd9a0fece44579c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1451981131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-01b60849286b9fd15",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4074035876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f0e360732f834426",
            "security_group_rule_id": "sgr-001c87a75feeae59b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_gateway.module.eks.aws_security_group.cluster",
            "module.eks_gateway.module.eks.aws_security_group.node",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:network-acl/acl-0e4a89cb581c7382e",
            "default_network_acl_id": "acl-0e4a89cb581c7382e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e4a89cb581c7382e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "335082366654",
            "subnet_ids": [
              "subnet-095e0a74586078f73",
              "subnet-09bb944bcb87d8c5e",
              "subnet-09dc9d949fa6237f6"
            ],
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-0ad1a982d3f5e0b38",
            "default_route_table_id": "rtb-0ad1a982d3f5e0b38",
            "id": "rtb-0ad1a982d3f5e0b38",
            "owner_id": "335082366654",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-09d59ee238b1e6b18",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09d59ee238b1e6b18",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8f6bdfabb21c8fa",
            "arn": "arn:aws:ec2:us-east-1:335082366654:elastic-ip/eipalloc-0b8f6bdfabb21c8fa",
            "domain": "vpc",
            "id": "eipalloc-0b8f6bdfabb21c8fa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-88-66-39.compute-1.amazonaws.com",
            "public_ip": "98.88.66.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_internet_gateway.this",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:internet-gateway/igw-00947dd4015772373",
            "id": "igw-00947dd4015772373",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00947dd4015772373",
            "id": "r-rtb-07bf1f26cd84e0d881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bf1f26cd84e0d88",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_internet_gateway.this",
            "module.vpc_backend.module.vpc.aws_route_table.public",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-06f481cb34ae42a1b",
            "id": "rtb-06f481cb34ae42a1b",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-07bf1f26cd84e0d88",
            "id": "rtb-07bf1f26cd84e0d88",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07450b759921fb81e",
            "route_table_id": "rtb-06f481cb34ae42a1b",
            "subnet_id": "subnet-095e0a74586078f73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_route_table.private",
            "module.vpc_backend.module.vpc.aws_subnet.private",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae73a16177da9f8f",
            "route_table_id": "rtb-06f481cb34ae42a1b",
            "subnet_id": "subnet-09bb944bcb87d8c5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_route_table.private",
            "module.vpc_backend.module.vpc.aws_subnet.private",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087615e5d34f00138",
            "route_table_id": "rtb-07bf1f26cd84e0d88",
            "subnet_id": "subnet-09dc9d949fa6237f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_route_table.public",
            "module.vpc_backend.module.vpc.aws_subnet.public",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d60aae7c452f79e8",
            "route_table_id": "rtb-07bf1f26cd84e0d88",
            "subnet_id": "subnet-0101c00ebd10dcfb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_route_table.public",
            "module.vpc_backend.module.vpc.aws_subnet.public",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-095e0a74586078f73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095e0a74586078f73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-09bb944bcb87d8c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb944bcb87d8c5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-09dc9d949fa6237f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc9d949fa6237f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-0101c00ebd10dcfb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0101c00ebd10dcfb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend",
              "kubernetes.io/cluster/eks-backend": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ec359c3be7da5b29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_backend.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:vpc/vpc-0ec359c3be7da5b29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e4a89cb581c7382e",
            "default_route_table_id": "rtb-0ad1a982d3f5e0b38",
            "default_security_group_id": "sg-09d59ee238b1e6b18",
            "dhcp_options_id": "dopt-039a59184ff45ebbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec359c3be7da5b29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad1a982d3f5e0b38",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-backend",
              "Project": "comerapay",
              "Role": "internal-backend"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:network-acl/acl-064122dace1d6d6d2",
            "default_network_acl_id": "acl-064122dace1d6d6d2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-064122dace1d6d6d2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "335082366654",
            "subnet_ids": [
              "subnet-01637fc191a7bfc77",
              "subnet-06f0ab9d860b2d266"
            ],
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-00a311532d2874559",
            "default_route_table_id": "rtb-00a311532d2874559",
            "id": "rtb-00a311532d2874559",
            "owner_id": "335082366654",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:security-group/sg-0aadf1cf65f516de0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0aadf1cf65f516de0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "335082366654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4408ef4637bf8e",
            "arn": "arn:aws:ec2:us-east-1:335082366654:elastic-ip/eipalloc-05e4408ef4637bf8e",
            "domain": "vpc",
            "id": "eipalloc-05e4408ef4637bf8e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-194-132.compute-1.amazonaws.com",
            "public_ip": "98.95.194.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_internet_gateway.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:internet-gateway/igw-0293e5cda344c195e",
            "id": "igw-0293e5cda344c195e",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0293e5cda344c195e",
            "id": "r-rtb-008ff90bd38b7c7801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008ff90bd38b7c780",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_internet_gateway.this",
            "module.vpc_gateway.module.vpc.aws_route_table.public",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-00041983efac907a6",
            "id": "rtb-00041983efac907a6",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "timeouts": null,
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:route-table/rtb-008ff90bd38b7c780",
            "id": "rtb-008ff90bd38b7c780",
            "owner_id": "335082366654",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "timeouts": null,
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fe28870f60a0928",
            "route_table_id": "rtb-00041983efac907a6",
            "subnet_id": "subnet-051a52656e2ad7591"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_route_table.private",
            "module.vpc_gateway.module.vpc.aws_subnet.private",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065124bf911a2e2af",
            "route_table_id": "rtb-00041983efac907a6",
            "subnet_id": "subnet-0fecd54c113940b6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_route_table.private",
            "module.vpc_gateway.module.vpc.aws_subnet.private",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e776c647475826",
            "route_table_id": "rtb-008ff90bd38b7c780",
            "subnet_id": "subnet-01637fc191a7bfc77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_route_table.public",
            "module.vpc_gateway.module.vpc.aws_subnet.public",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f115dc6f49f5f6de",
            "route_table_id": "rtb-008ff90bd38b7c780",
            "subnet_id": "subnet-06f0ab9d860b2d266"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_route_table.public",
            "module.vpc_gateway.module.vpc.aws_subnet.public",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-051a52656e2ad7591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051a52656e2ad7591",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-0fecd54c113940b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fecd54c113940b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-01637fc191a7bfc77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01637fc191a7bfc77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:subnet/subnet-06f0ab9d860b2d266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f0ab9d860b2d266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335082366654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing",
              "kubernetes.io/cluster/eks-gateway": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335082366654:vpc/vpc-044716d7a9f9f9cca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-064122dace1d6d6d2",
            "default_route_table_id": "rtb-00a311532d2874559",
            "default_security_group_id": "sg-0aadf1cf65f516de0",
            "dhcp_options_id": "dopt-039a59184ff45ebbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044716d7a9f9f9cca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a311532d2874559",
            "owner_id": "335082366654",
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway",
              "Project": "comerapay",
              "Role": "public-facing"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f481cb34ae42a1b519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f481cb34ae42a1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02494747c493638c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_route_table.private",
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_backend.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00041983efac907a6662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00041983efac907a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-02494747c493638c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_route_table.private",
            "module.vpc_gateway.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-02494747c493638c2",
            "peer_owner_id": "335082366654",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0ec359c3be7da5b29",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "vpc-gateway-to-backend-peering",
              "Project": "comerapay"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "vpc-gateway-to-backend-peering",
              "Project": "comerapay"
            },
            "vpc_id": "vpc-044716d7a9f9f9cca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_backend.module.vpc.aws_vpc.this",
            "module.vpc_gateway.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}